Configure init manager:systemd

--- a/meta-tech-distro/conf/distro/tech-distro.conf
+++ b/meta-tech-distro/conf/distro/tech-distro.conf
@@ -1,9 +1,3 @@
-require conf/distro/defaultsetup.conf
-
-
-DISTRO_FEATURES:append = " systemd usrmerge"
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
-VIRTUAL-RUNTIME_init_manager = "systemd"
-VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+INIT_MANAGER = "systemd"
 
 DISTRO_FEATURES:remove = "alsa bluetooth wifi pulseaudio pci 3g"
