Optimize custom distro

--- a/meta-tech-distro/conf/distro/tech-distro.conf
+++ b/meta-tech-distro/conf/distro/tech-distro.conf
@@ -1,3 +1,13 @@
-INIT_MANAGER = "systemd"
+DISTRO_Name = "tech-distro"
+DISTRO_VERSION = "0.1"
 
-DISTRO_FEATURES:remove = "alsa bluetooth wifi pulseaudio pci 3g"
+
+DISTRO_FEATURES:remove = "alsa bluetooth wifi pulseaudio pci 3g x11 nfs ipv4"
+DISTRO_RRECOMMENDS = ""
+PREFERRED_PROVIDER_tar = "busybox"
+PREFERRED_PROVIDER_coreutils = "busybox"
+DISTRO_FEATURES_BACKFILL:remove = "pulseaudios"
+DISTRO_FEATURES_NATIVE:remove = "x11"
+INIT_MANAGER = "systemd"
+TCLIBCAPPEND = ""
+FULL_OPTIMIZATION =  '-O2 -pipe ${DEBUG_FLAGS}'
