Kas:Organization of kas configuration
Signed-off-by: hamzaamri <hamzaamri612@gmail.com>

--- a/Kas/kas_config.yml
+++ b/Kas/kas_config.yml
@@ -1,24 +1,13 @@
 header:
   version: 18
+  includes:
+    -Kas/include/local.yml
+    -Kas/include/oe.yml
 machine: qemux86-64
 distro: tech-distro
 build_system: oe
 target: core-image-base
 repos:
-
-  openembedded-core:
-    url: "https://github.com/openembedded/openembedded-core.git"
-    branch: "scarthgap"        
-    path: "/home/hamza/yocto/layers/oe-core"
-    layers:
-      meta: 
-
-  bitbake:
-    url: "https://github.com/openembedded/bitbake.git"
-    branch: "2.8"
-    path: "/home/hamza/yocto/layers/oe-core/bitbake"
-    layers:
-      bitbake: excluded
   meta_raspberrypi:
     url: "https://github.com/agherzan/meta-raspberrypi.git"
     path: "/home/hamza/yocto/layers/meta-raspberrypi"
@@ -30,21 +19,7 @@ repos:
   meta-tech-prj:
     path: "../meta-tech-prj"
     
-bblayers_conf_header:
-  standard: |
-    POKY_BBLAYERS_CONF_VERSION = "2"
-    BBPATH = "${TOPDIR}"
-    BBFILES ?= ""
-local_conf_header:
-    custom-local-conf: |
-        ACCEPT_FSL_EULA = "1"
-        DL_DIR = "/home/hamza/yocto/work/downloads"
-        SSTATE_DIR = "/home/hamza/yocto/work/sstate-cache"
-        INHERIT:remove = "create-spdx"
-        INHERIT += "buildhistory"
-        BUILDHISTORY_COMMIT = "1"
-        INHERIT += "cve-check"
-        
+
         
         
 
